--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -35,3 +35,4 @@ jobs:
           TF_VAR_vpc_cidr_block: ${{ vars.vpc_cidr_block }}
           TF_VAR_public_subnet_cidr_block: ${{ vars.public_subnet_cidr_block }}
           TF_VAR_my_ip: ${{ vars.my_ip }}
+          TF_VAR_public_key: ${{ vars.mtckey_pub }}
