--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Step 4: Terraform Apply
       - name: Terraform Apply
-        run: terraform apply tfplan
+        run: terraform apply
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
