--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -28,7 +28,7 @@ jobs:
 
       # Step 4: Terraform Plan
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: terraform plan
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -37,9 +37,9 @@ jobs:
           TF_VAR_my_ip: ${{ vars.my_ip }}
           TF_VAR_public_key: ${{ vars.mtckey_pub }}
 
-      # Step 5: Upload Plan as Artifact
-      - name: Upload Terraform Plan
-        uses: actions/upload-artifact@v3
-        with:
-          name: terraform-plan
-          path: tfplan
+    #   # Step 5: Upload Plan as Artifact
+    #   - name: Upload Terraform Plan
+    #     uses: actions/upload-artifact@v3
+    #     with:
+    #       name: terraform-plan
+    #       path: tfplan
