--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -32,11 +32,12 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_public_key: ${{ secrets.AWS_PUBLIC_KEY }}
           TF_VAR_vpc_cidr_block: ${{ vars.vpc_cidr_block }}
           TF_VAR_public_subnet_cidr_block: ${{ vars.public_subnet_cidr_block }}
           TF_VAR_my_ip: ${{ vars.my_ip }}
-          TF_VAR_public_key: ${{ vars.mtckey_pub }}
-
+        
+          
     #   # Step 5: Upload Plan as Artifact
     #   - name: Upload Terraform Plan
     #     uses: actions/upload-artifact@v3
