--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -17,5 +17,8 @@ jobs:
       - name: Initialize Terraform
         run: terraform init
 
-      - name: Run Terraform Destroy
+      - name: Terraform Destroy
         run: terraform destroy -auto-approve
+        env:
+         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
