--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -20,5 +20,9 @@ jobs:
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
         env:
-         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          TF_VAR_public_key: ${{ secrets.AWS_PUBLIC_KEY }}
+          TF_VAR_vpc_cidr_block: ${{ vars.vpc_cidr_block }}
+          TF_VAR_public_subnet_cidr_block: ${{ vars.public_subnet_cidr_block }}
+          TF_VAR_my_ip: ${{ vars.my_ip }}
