destroy bug fix

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,7 +1,10 @@
 name: Terraform Destroy
 
 on:
-  workflow_dispatch:  # Triggered manually via the GitHub UI
+  workflow_run:
+    workflows: ["Terraform Plan"]
+    types:
+      - completed
 
 jobs:
   destroy:
@@ -16,6 +19,9 @@ jobs:
 
       - name: Initialize Terraform
         run: terraform init
+
+      - name: List Terraform State
+        run: terraform state list
 
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
